remove redis as of 256

--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -33,7 +33,7 @@ Once created, the Director adds these tasks to the Task Queue. Worker processes 
 
 ### <a id="queue"></a> Task Queue
 
-An asynchronous queue used by the Director and Workers to manage tasks. The Task Queue resides in a Redis key-value store.
+An asynchronous queue used by the Director and Workers to manage tasks. The Task Queue resides in the Database.
 
 ### <a id="workers"></a> Workers
 
