--- a/post-deploy.html.md.erb
+++ b/post-deploy.html.md.erb
@@ -11,7 +11,7 @@ Release job can have a post-deploy script that will run after all jobs in the de
 ---
 ## <a id="director-configuration"></a> Director Configuration
 
-Currently the Director does run post deploy scripts by default. Use [`director.enable_post_deploy` property](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.enable_post_deploy) to enable running scripts.
+Currently the Director does not run post deploy scripts by default. Use [`director.enable_post_deploy` property](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.enable_post_deploy) to enable running scripts.
 
 ---
 ## <a id="job-configuration"></a> Job Configuration
