--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -22,7 +22,7 @@ Schema for `cloud_properties` section used by dynamic network or manual network 
 
 * **virtual\_network\_name** [String, required]: Name of a virtual network. Example: `boshnet`.
 * **subnet_name** [String, required]: Name of a subnet within virtual network.
-* **security_group** [String, optional]: The [security group](https://azure.microsoft.com/en-us/documentation/articles/virtual-networks-nsg/) to apply to all VMs placed on this network. Default to the security group specified by default_security_group in the global CPI settings unless a security group is specified on a resource pool for a VM. The security group can be specified either in a resource pool or on a network.
+* **security_group** [String, optional]: The [security group](https://azure.microsoft.com/en-us/documentation/articles/virtual-networks-nsg/) to apply to all VMs placed on this network. Default to the security group specified by `default_security_group` in the global CPI settings unless a security group is specified on a resource pool for a VM. The security group can be specified either in a resource pool or on a network.
 
 See [how to create a virtual network and subnets](azure-resources.html#virtual-network).
 
@@ -57,20 +57,20 @@ Schema for `cloud_properties` section:
 
 * **instance_type** [String, required]: Type of the [instance](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-linux-sizes/). Example: `Standard_A2`.
 * **storage\_account\_name** [String, optional]: Storage account for VMs. If this is not set, the VMs will be created in the default storage account. See [this document](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/get-started/deploy-cloudfoundry-for-enterprise.md#multiple-storage-accounts) for more details on why this option exists. If you use a different storage account which must be in the same resource group, please make sure:
-    1. the permissions for the container 'stemcell' in the default storage account is set to 'Public read access for blobs only'.
-    1. a table 'stemcells' is created in the default storage account.
-    1. two containers 'bosh' and 'stemcell' are created in the new storage account.
-    If you use DS-series or GS-series as instance_type, you should set this to a premium storage account.
+    1. the permissions for the container `stemcell` in the default storage account is set to `Public read access for blobs only`.
+    1. a table `stemcells` is created in the default storage account.
+    1. two containers `bosh` and `stemcell` are created in the new storage account.
+    If you use `DS-series` or `GS-series` as `instance_type`, you should set this to a premium storage account.
     See more information about [Azure premium storage](https://azure.microsoft.com/en-us/documentation/articles/storage-premium-storage-preview-portal/). See [avaliable regions](http://azure.microsoft.com/en-us/regions/#services) where you can create premium storage accounts.
 * **availability_set** [String, optional]: Name of an [availability set](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) to use for VMs. If available set does not exist, it will be automatically created. [More details](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/deploy-cloudfoundry-for-enterprise#availability-set).
-* **platform\_update\_domain_count** [Integer, optional]: The count of [update domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is 5.
-* **platform\_fault\_domain_count** [Integer, optional]: The count of [fault domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is 3.
+* **platform\_update\_domain_count** [Integer, optional]: The count of [update domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is `5`.
+* **platform\_fault\_domain_count** [Integer, optional]: The count of [fault domain](https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-manage-availability/) in the availability set. Default value is `3`.
 * **load_balancer** [String, optional]: Name of an [load balancer](https://azure.microsoft.com/en-us/documentation/articles/load-balancer-overview/) the VMs should belong to. You need to create the load balancer manually before configuring it.
-* **security_group** [String, optional]: The [security group](https://azure.microsoft.com/en-us/documentation/articles/virtual-networks-nsg/) to apply to all VMs placed in this resource pool. Default to the security group specified by default_security_group in the global CPI settings unless a security group is specified on one of the VM networks. The security group can be specified either in a resource pool or on a network.
-* **caching** [String, optional]: Type of the disk caching of the VMs' OS disks. It can be either 'None', 'ReadOnly' or 'ReadWrite'. Default is 'ReadWrite'
-* **ephemeral_disk** [Hash, optional]: Ephemeral disk to apply for all VMs that are in this resource pool. If this option is not set, a data disk will be created as the ephemeral disk. The size of the data disk is 15_000 megabytes.
+* **security_group** [String, optional]: The [security group](https://azure.microsoft.com/en-us/documentation/articles/virtual-networks-nsg/) to apply to all VMs placed in this resource pool. Default to the security group specified by `default_security_group` in the global CPI settings unless a security group is specified on one of the VM networks. The security group can be specified either in a resource pool or on a network.
+* **caching** [String, optional]: Type of the disk caching of the VMs' OS disks. It can be either `None`, `ReadOnly` or `ReadWrite`. Default is `ReadWrite`.
+* **ephemeral_disk** [Hash, optional]: Ephemeral disk to apply for all VMs that are in this resource pool. If this option is not set, a data disk will be created as the ephemeral disk. The size of the data disk is `15_000` megabytes.
     * **use\_temporary\_disk** [String, optional]: Whether to use Azure temporary  disk as the ephemeral disk. Default is false. When this option is not set or set to false, a data disk will be created as the ephemeral disk.
-    * **size** [Integer, optional]: Specifies the disk size in megabytes. Default is 15_000 megabytes. This value is valid only when use_temporary_disk is not set or set to false. The size of the ephemeral disk for the BOSH VM should be larger or equal than 15_000 megabytes.
+    * **size** [Integer, optional]: Specifies the disk size in megabytes. Default is `15_000` megabytes. This value is valid only when use_temporary_disk is not set or set to false. The size of the ephemeral disk for the BOSH VM should be larger or equal than `15_000` megabytes.
 
 Example of a `Standard_A2` instance:
 
@@ -93,7 +93,7 @@ resource_pools:
 
 Schema for `cloud_properties` section:
 
-* **caching** [String, optional]: Type of the disk caching. It can be either 'None', 'ReadOnly' or 'ReadWrite'. Default is 'None'. Only 'None' and 'ReadOnly' are supported for premium disks.
+* **caching** [String, optional]: Type of the disk caching. It can be either `None`, `ReadOnly` or `ReadWrite`. Default is `None`. Only `None` and `ReadOnly` are supported for premium disks.
 
 Example of 10GB disk:
 
