Add links for Azure

--- a/build-cpi.html.md.erb
+++ b/build-cpi.html.md.erb
@@ -13,6 +13,7 @@ Both bosh-init and the Director expect to be configured with a CPI release to fu
 CPIs written in Ruby:
 
 - [AWS CPI release](https://github.com/cloudfoundry-incubator/bosh-aws-cpi-release)
+- [Azure CPI release](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release)
 - [OpenStack CPI release](https://github.com/cloudfoundry-incubator/bosh-openstack-cpi-release)
 - [vSphere CPI release](https://github.com/cloudfoundry-incubator/bosh-vsphere-cpi-release)
 - [vCloud CPI release](https://github.com/cloudfoundry-incubator/bosh-vcloud-cpi-release)
