--- a/tips.html.md.erb
+++ b/tips.html.md.erb
@@ -5,6 +5,7 @@ title: Tips
 This document lists several common problems. If you are looking for CPI specific errors see:
 
 - [AWS CPI errors](aws-cpi.html#errors)
+- [Azure CPI errors](azure-cpi.html#errors)
 - [OpenStack CPI errors](openstack-cpi.html#errors)
 - [vSphere CPI errors](vsphere-cpi.html#errors)
 
