--- a/cloud-config.html.md.erb
+++ b/cloud-config.html.md.erb
@@ -99,6 +99,7 @@ compilation:
 ```
 
 - [See AWS CPI example](aws-cpi.html#cloud-config)
+- [See Azure CPI example](azure-cpi.html#cloud-config)
 - [See OpenStack CPI example](openstack-cpi.html#cloud-config)
 - [See vSphere CPI example](vsphere-cpi.html#cloud-config)
 
@@ -125,6 +126,7 @@ azs:
 ### <a id='azs-cloud-properties'></a> CPI Specific `cloud_properties`
 
 - [See AWS CPI AZ cloud properties](aws-cpi.html#azs)
+- [See Azure CPI AZ cloud properties](azure-cpi.html#azs)
 - [See OpenStack CPI AZ cloud properties](openstack-cpi.html#azs)
 - [See vSphere CPI AZ cloud properties](vsphere-cpi.html#azs)
 - [See vCloud CPI AZ cloud properties](vcloud-cpi.html#azs)
@@ -139,6 +141,7 @@ See [networks](networks.html) for more details.
 ### <a id='networks-cloud-properties'></a> CPI Specific `cloud_properties`
 
 - [See AWS CPI network cloud properties](aws-cpi.html#networks)
+- [See Azure CPI network cloud properties](azure-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
@@ -162,6 +165,7 @@ vm_types:
 ### <a id='vm-types-cloud-properties'></a> CPI Specific `cloud_properties`
 
 - [See AWS CPI VM types cloud properties](aws-cpi.html#resource-pools)
+- [See Azure CPI VM types cloud properties](azure-cpi.html#resource-pools)
 - [See OpenStack CPI VM types cloud properties](openstack-cpi.html#resource-pools)
 - [See vSphere CPI VM types cloud properties](vsphere-cpi.html#resource-pools)
 - [See vCloud CPI VM types cloud properties](vcloud-cpi.html#resource-pools)
@@ -208,6 +212,7 @@ disk_types:
 ### <a id='disk-types-cloud-properties'></a> CPI Specific `cloud_properties`
 
 - [See AWS CPI disk type cloud properties](aws-cpi.html#disk-pools)
+- [See Azure CPI disk type cloud properties](azure-cpi.html#disk-pools)
 - [See OpenStack CPI disk type cloud properties](openstack-cpi.html#disk-pools)
 - [See vSphere CPI disk type cloud properties](vsphere-cpi.html#disk-pools)
 - [See vCloud CPI disk type cloud properties](vcloud-cpi.html#disk-pools)
