persistent disk fs

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -73,6 +73,7 @@ See [Recent Additions and Updates](recent.html).
     * [Links](links.html)
     * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
+    * [Customizing persistent disk FS](persistent-disk-fs.html)
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
 
