--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,7 @@
 Title: Recent Additions and Updates
 ---
 
+* [Customizing persistent disk FS](persistent-disk-fs.html)
 * [Common addons](addons-common.html)
 
 ---
