--- a/aws-iam-users.html.md.erb
+++ b/aws-iam-users.html.md.erb
@@ -65,7 +65,9 @@ title: Creating IAM Users
             "ec2:CreateSnapshot",
             "ec2:CreateTags",
             "ec2:RunInstances",
-            "ec2:TerminateInstances"
+            "ec2:TerminateInstances",
+            "ec2:RegisterImage",
+            "ec2:DeregisterImage"
           ],
           "Effect": "Allow",
           "Resource": "*"
