--- a/addons-common.html.md.erb
+++ b/addons-common.html.md.erb
@@ -36,6 +36,8 @@ See [syslog_forwarder job](https://bosh.io/jobs/syslog_forwarder?source=github.c
 ---
 ## <a id='login-banner'></a> Custom SSH login banner
 
+<p class="note">Note: This job work with 3232+ stemcell series due to how sshd is configured.</p>
+
 Need: Configure custom login banner to comply with organizational regulations.
 
 ```yaml
@@ -61,6 +63,8 @@ See [login_banner job](https://bosh.io/jobs/login_banner?source=github.com/cloud
 
 ---
 ## <a id='misc-users'></a> Custom SSH users
+
+<p class="note">Warning: This job does not remove users from the VM when user is removed from the manifest.</p>
 
 Need: Provide SSH access to all VMs for a third party automation system.
 
