mention access events

--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,7 +2,11 @@
 Title: Recent Additions and Updates
 ---
 
+* [Access event logging](director-access-events.html)
 * [Customizing persistent disk FS](persistent-disk-fs.html)
+
+---
+
 * [Common addons](addons-common.html)
 
 ---
