--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -41,6 +41,7 @@ See [Recent Additions and Updates](recent.html).
 * [Removal of compilers](remove-dev-tools.html)
 * [Access event logging](director-access-events.html)
 * [Events](events.html)
+* [Explicit ARP Flushing](flush-arp.html)
 * [Configuring external database](director-configure-db.html)
 * [Configuring external blobstore](director-configure-blobstore.html)
 * [Micro CLI plugin **[deprecated, but supported]**](bootstrap.html)
