metion dev_tools_file_list.txt

--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -236,9 +236,9 @@ No return value
 ---
 ### <a id="set-vm-metadata"></a> `set_vm_metadata`
 
-Sets VM's metadata to make it easier for operators to find categorize VMs when looking at the IaaS management console. For example AWS CPI uses tags to store metadata for operators to see in the AWS Console.
+Sets VM's metadata to make it easier for operators to categorize VMs when looking at the IaaS management console. For example AWS CPI uses tags to store metadata for operators to see in the AWS Console.
 
-We recommend to set VM name based on sometimes provided `name` key.
+We recommend to set VM name based on *sometimes* provided `name` key.
 
 #### Arguments
 
