--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,7 @@
 Title: Recent Additions and Updates
 ---
 
+* [Explicit ARP Flushing](flush-arp.html)
 * [Events](events.html)
 * [Access event logging](director-access-events.html)
 * [Customizing persistent disk FS](persistent-disk-fs.html)
