--- a/remove-dev-tools.html.md.erb
+++ b/remove-dev-tools.html.md.erb
@@ -4,7 +4,11 @@ title: Removal of compilers and other development tools
 
 <p class="note">Note: This feature is available with bosh-release v255.4+ and on 3213+ stemcell series.</p>
 
-It's typically unnecessary to have development tools installed on all VMs in a production environment. All stemcells come with a minimal set of development tools for compilation workers to successfully compile packages. To remove development tools from all non-compilation VMs:
+It's typically unnecessary to have development tools installed on all VMs in a production environment. All stemcells come with a minimal set of development tools for compilation workers to successfully compile packages.
+
+To see which files and directories will be removed from the stemcell on bootup, unpack stemcell tarball and view `dev_tools_file_list.txt`.
+
+To remove development tools from all non-compilation VMs:
 
 1. Change deployment manifest for the Director:
 
