mention link properties

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -74,6 +74,7 @@ See [Recent Additions and Updates](recent.html).
 * [Trusted certificates](trusted-certs.html)
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
+    * [Link properties](links-properties.html)
     * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
     * [Customizing persistent disk FS](persistent-disk-fs.html)
