--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -75,6 +75,7 @@ See [Recent Additions and Updates](recent.html).
 * [Manifest v2 schema](manifest-v2.html)
     * [Links](links.html)
     * [Link properties](links-properties.html)
+    * [Manual linking](links-manual.html)
     * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
     * [Customizing persistent disk FS](persistent-disk-fs.html)
