--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,8 @@
 Title: Recent Additions and Updates
 ---
 
+* [Link properties](links-properties.html)
+* [Manual linking](links-manual.html)
 * [Explicit ARP Flushing](flush-arp.html)
 * [Events](events.html)
 * [Access event logging](director-access-events.html)
