link between links

--- a/links.html.md.erb
+++ b/links.html.md.erb
@@ -235,4 +235,6 @@ instance_groups:
 ```
 
 ---
+Next: [Link properties](links-properties.html) or [Manual linking](links-manual.html).
+
 [Back to Table of Contents](index.html#deployment-config)
