--- a/links-properties.html.md.erb
+++ b/links-properties.html.md.erb
@@ -113,4 +113,6 @@ instance_groups:
 ```
 
 ---
+Next: [Manual linking](links-manual.html)
+
 [Back to Table of Contents](index.html#deployment-config)
