--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -69,8 +69,10 @@ Schema for `cloud_properties` section:
 * **security_groups** [Array, optional]: Array of security groups to apply for all VMs that are in this resource pool. Defaults to security groups specified by `default_security_groups` in the global CPI settings unless security groups are specified on one of the VM networks. Security groups can be specified either on a resource pool or on a network. Available in v16+.
 * **key_name** [String, optional]: Key pair name. Defaults to key pair name specified by `default_key_name` in the global CPI settings. Example: `bosh`.
 * **scheduler_hints** [Hash, optional]: Data passed to the OpenStack Filter scheduler to influence its decision where new VMs can be placed. See [VM Anti-Affinity](vm-anti-affinity.html#openstack) for a detailed example. Example: `{ group: af09abf2-2283... }`
+* **root_disk** [Hash, optional]: Custom root disk properties. Requires [`boot_from_volume: true`](https://bosh.io/jobs/openstack_cpi?source=github.com/cloudfoundry-incubator/bosh-openstack-cpi-release#p=openstack.boot_from_volume) to enable cinder-backed boot volumes. Available in v25+.
+    * **size** [Integer, required]: Specifies the disk size in gigabytes.
 
-Example of a `m1.small` instance:
+Example of an `m1.small` instance:
 
 ```yaml
 resource_pools:
@@ -84,7 +86,7 @@ resource_pools:
     availability_zone: east
 ```
 
-Example of a `m1.small` instance locked down by specific security groups:
+Example of an `m1.small` instance locked down by specific security groups:
 
 ```yaml
 resource_pools:
@@ -97,6 +99,22 @@ resource_pools:
     instance_type: m1.small
     availability_zone: east
     security_groups: [web-workers]
+```
+
+Example of an `m1.small` instance with custom root disk size of 50GB:
+
+```yaml
+resource_pools:
+- name: default
+  network: default
+  stemcell:
+    name: bosh-openstack-kvm-ubuntu-trusty-go_agent
+    version: latest
+  cloud_properties:
+    instance_type: m1.small
+    availability_zone: east
+    root_disk:
+      size: 50
 ```
 
 ---
