--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -68,9 +68,8 @@ Schema for `cloud_properties` section:
 * **load_balancer** [String, optional]: Name of an [load balancer](https://azure.microsoft.com/en-us/documentation/articles/load-balancer-overview/) the VMs should belong to. You need to create the load balancer manually before configuring it.
 * **security_group** [String, optional]: The [security group](https://azure.microsoft.com/en-us/documentation/articles/virtual-networks-nsg/) to apply to all VMs placed in this resource pool. Default to the security group specified by `default_security_group` in the global CPI settings unless a security group is specified on one of the VM networks. The security group can be specified either in a resource pool or on a network.
 * **caching** [String, optional]: Type of the disk caching of the VMs' OS disks. It can be either `None`, `ReadOnly` or `ReadWrite`. Default is `ReadWrite`.
-* **ephemeral_disk** [Hash, optional]: Ephemeral disk to apply for all VMs that are in this resource pool. If this option is not set, a data disk will be created as the ephemeral disk. The size of the data disk is `15_000` megabytes.
-    * **use\_temporary\_disk** [String, optional]: Whether to use Azure temporary  disk as the ephemeral disk. Default is false. When this option is not set or set to false, a data disk will be created as the ephemeral disk.
-    * **size** [Integer, optional]: Specifies the disk size in megabytes. Default is `15_000` megabytes. This value is valid only when use_temporary_disk is not set or set to false. The size of the ephemeral disk for the BOSH VM should be larger or equal than `15_000` megabytes.
+* **ephemeral_disk** [Hash, optional]: Ephemeral disk to apply for all VMs that are in this resource pool. A data disk will be created as the ephemeral disk.
+    * **size** [Integer, optional]: Specifies the disk size in megabytes. Default is 15_360 megabytes. The size of the ephemeral disk for the BOSH VM should be larger or equal than 15_360 megabytes.
 
 Example of a `Standard_A2` instance:
 
@@ -84,8 +83,7 @@ resource_pools:
   cloud_properties:
     instance_type: Standard_A2
     ephemeral_disk:
-      use_temporary_disk: false
-      size: 20_000
+      size: 20_480
 ```
 
 ---
