--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -115,6 +115,10 @@ A VM that acts as a single access point for the Director and deployed VMs. For r
 
 A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment.
 
+## <a id="operator"></a> Operator
+
+The Command Line Interface (CLI) is the primary operator interface to BOSH. An operator uses the CLI to interact with the Director and perform actions on the cloud.
+
 ## <a id="orphaned-disk"></a> Orphaned (Persistent) Disk
 
 An orphaned disk is a persistent disk that will be garbage collected after a few days unless it's reattached to an instance.
