add mitaka to the list

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -158,8 +158,9 @@ cloud_provider:
 
 1. An OpenStack environment running one of the following supported releases:
     * [Juno](http://www.openstack.org/software/juno)
-    * [Kilo](http://www.openstack.org/software/kilo)
-    * [Liberty](http://www.openstack.org/software/liberty)
+    * [Kilo](http://www.openstack.org/software/kilo) (actively tested)
+    * [Liberty](http://www.openstack.org/software/liberty) (actively tested)
+    * [Mitaka](http://www.openstack.org/software/mitaka)
 
     <p class="note">Note: Juno has a <a href="https://bugs.launchpad.net/nova/+bug/1396854">bug</a> that prevents BOSH to assign specific IPs to VMs. You have to apply a Nova patch to avoid this problem.</p>
 
