add a few cpi details

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -30,6 +30,9 @@ See [Recent Additions and Updates](recent.html).
     * [On OpenStack](init-openstack.html)
     * [On vSphere](init-vsphere.html)
     * [On vCloud](init-vcloud.html)
+    * On SoftLayer (coming soon)
+    * On Google Compute Engine (coming soon)
+    * [On RackHD](rackhd-cpi.html)
     * [On Local machine using BOSH Lite](bosh-lite.html)
 
 ### <a id="director-config"></a> Advanced Director configuration
@@ -98,7 +101,11 @@ See [Recent Additions and Updates](recent.html).
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
 * [vCloud](vcloud-cpi.html)
+* SoftLayer (coming soon)
+* Google Compute Engine (coming soon)
+* [RackHD](rackhd-cpi.html)
 * [Warden/Garden](warden-cpi.html)
+* [VirtualBox](virtualbox-cpi.html)
 
 ### <a id="hm"></a> Health management of VMs and processes
 
